--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,4 @@
+/// <reference types="node" />
 {
   "compilerOptions": {
     "forceConsistentCasingInFileNames": true,
@@ -9,7 +10,8 @@
     "resolveJsonModule": true,
     "sourceMap": true,
     "outDir": "dist",
-    "types": ["node", "@cucumber/cucumber"]
+    "types": ["node", "@cucumber/cucumber"],
+    "ignoreDeprecations": "6.0"
   },
   "include": ["src", "test", "cucumber.ts"]
 }
